--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,10 @@
 	margin: 0;
 }
 
+:root {
+	--primary-color: rgb(26, 119, 240);
+}
+
 html,
 body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -53,6 +57,15 @@ li {
 	justify-content: center;
 	height: 100vh;
 	width: 100%;
+}
+
+#nprogress .bar {
+	background: linear-gradient(
+		to right,
+		var(--primary-color),
+		rgb(124, 124, 255)
+	) !important;
+	height: 3px;
 }
 
 /* @media (prefers-color-scheme: dark) {
