--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
 }
 
 :root {
+	--nav-bar-height: 54px;
 	--primary-color: rgb(26, 119, 240);
 }
 
@@ -22,18 +23,36 @@ a {
 	display: block;
 }
 
+.page-wrapper {
+	padding-top: var(--nav-bar-height);
+	min-height: calc(100vh - var(--nav-bar-height));
+}
+
 li {
 	list-style-type: none;
 }
 
 #nav-bar {
+	position: fixed;
 	box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+	z-index: 2;
+	width: 100%;
+	background: white;
+}
+
+.nav-item-left {
+	gap: 45px;
+	align-items: center;
+	display: flex;
 }
 
 #nav-bar .container {
 	display: flex;
-	gap: 48px;
-	align-items: center;
+	justify-content: space-between;
+}
+
+#nav-bar .item {
+	display: none;
 }
 
 #nav-bar a {
@@ -43,6 +62,18 @@ li {
 
 #nav-bar a.active {
 	background: rgb(230, 230, 230);
+	border-radius: 0.4rem;
+}
+
+#nav-bar .logo-circle {
+	height: 30px;
+	border-radius: 3rem;
+}
+
+@media screen and (min-width: 800px) {
+	#nav-bar .item {
+		display: block;
+	}
 }
 
 .container {
@@ -55,11 +86,38 @@ li {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
 	width: 100%;
+	height: 100vh;
+}
+
+.footer {
+	background: black;
+	color: white;
+}
+
+#hero {
+	background: linear-gradient(
+		45deg,
+		rgb(219, 219, 219),
+		rgb(245, 245, 245),
+		rgb(250, 250, 250)
+	);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+h1 {
+	font-size: 3rem;
+	font-weight: 900;
+}
+
+section {
+	min-height: 500px;
 }
 
 #nprogress .bar {
+	margin-top: var(--nav-bar-height);
 	background: linear-gradient(
 		to right,
 		var(--primary-color),
