--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap');
+
 *,
 *::after,
 *::before {
@@ -8,14 +10,17 @@
 
 :root {
 	--nav-bar-height: 41px;
+	--white-color: rgb(241, 241, 241);
+	--black-color: rgb(14, 14, 14);
 	--nav-bar-height-mobile: 205px;
 	--primary-color: rgb(26, 119, 240);
+	--secondary-color: rgb(124, 124, 255);
 }
 
 html,
 body {
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	font-family: 'Merriweather', serif;
+	background: var(--white-color);
 }
 
 .page-wrapper {
@@ -29,7 +34,7 @@ body {
 	z-index: 2;
 	width: 100%;
 	height: var(--nav-bar-height);
-	background: white;
+	background: var(--white-color);
 }
 
 .nav-item-left {
@@ -45,7 +50,7 @@ body {
 .nav-items.mobile {
 	display: flex;
 	flex-direction: column;
-	background: white;
+	background: var(--white-color);
 	box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
 }
 
@@ -80,6 +85,16 @@ body {
 	margin: 0 auto;
 }
 
+.section-flex-reverse {
+	display: flex;
+	flex-direction: column;
+	gap: 1.4em;
+}
+
+.section-flex-reverse img {
+	aspect-ratio: 6/9;
+}
+
 .center {
 	display: flex;
 	align-items: center;
@@ -89,8 +104,8 @@ body {
 }
 
 .footer {
-	background: black;
-	color: white;
+	background: var(--black-color);
+	color: var(--white-color);
 }
 
 #nprogress .bar {
@@ -98,20 +113,10 @@ body {
 	background: linear-gradient(
 		to right,
 		var(--primary-color),
-		rgb(124, 124, 255)
+		var(--secondary-color)
 	) !important;
 	height: 3px;
 }
-
-/* @media (prefers-color-scheme: dark) {
-		html {
-			color-scheme: dark;
-		}
-		body {
-			color: white;
-			background: black;
-		}
-} */
 
 li {
 	list-style-type: none;
@@ -129,7 +134,14 @@ a.image-container {
 
 section {
 	padding: 3em 0;
-	min-height: 600px;
+	min-height: 500px;
+}
+
+section img {
+	width: 100%;
+	object-fit: cover;
+	aspect-ratio: 9/6;
+	/* border-radius: 2rem; */
 }
 
 section h2 {
@@ -139,12 +151,38 @@ section h2 {
 h1 {
 	font-size: 3em;
 	font-weight: 900;
+	line-height: 1em;
 }
 p {
 	font-size: 0.9em;
+	text-align: justify;
 }
 
 span {
-	color: var(--primary-color);
+	color: var(--secondary-color);
 	font-weight: bold;
+}
+
+@media (prefers-color-scheme: dark) {
+	html {
+		color-scheme: dark;
+		color: var(--white-color);
+	}
+	body {
+		color: var(--white-color);
+		background: var(--black-color);
+	}
+	.nav-items.mobile {
+		background: var(--black-color);
+	}
+	.footer {
+		background: var(--white-color);
+		color: var(--black-color);
+	}
+	#nav-bar a.active {
+		background: rgb(66, 66, 66);
+	}
+	#nav-bar {
+		background: var(--black-color);
+	}
 }
