--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,9 +23,25 @@ body {
 	background: var(--white-color);
 }
 
+#nav-bar .flex {
+	height: 41px;
+	display: flex;
+	gap: 45px;
+	align-items: center;
+}
+
 .page-wrapper {
 	padding-top: var(--nav-bar-height-mobile);
 	min-height: calc(100vh - var(--nav-bar-height-mobile));
+}
+
+.hamburger {
+	height: 1rem;
+	cursor: pointer;
+}
+
+.hamburger path {
+	stroke: var(--black-color);
 }
 
 #nav-bar {
@@ -48,10 +64,14 @@ body {
 }
 
 .nav-items.mobile {
-	display: flex;
+	display: none;
 	flex-direction: column;
 	background: var(--white-color);
 	box-shadow: rgba(17, 17, 26, 0.1) 0px 0px 16px;
+}
+
+.nav-items.mobile.open {
+	display: flex;
 }
 
 #nav-bar .container {
@@ -60,10 +80,6 @@ body {
 	height: var(--nav-bar-height);
 	align-items: center;
 }
-
-/* #nav-bar .item {
-	display: none;
-} */
 
 #nav-bar a {
 	padding: 10px 20px;
@@ -128,7 +144,7 @@ a {
 	display: block;
 }
 
-a.image-container {
+#nav-bar a.image-container {
 	padding: 0px;
 }
 
@@ -184,5 +200,8 @@ span {
 	}
 	#nav-bar {
 		background: var(--black-color);
+	}
+	.hamburger path {
+		stroke: var(--white-color);
 	}
 }
