--- a/styles/home.css
+++ b/styles/home.css
@@ -17,6 +17,12 @@
 	/* border-radius: 0.3rem; */
 }
 
+.down-arrow {
+	margin: 1em auto 0 auto;
+	width: 100%;
+	height: 15px;
+}
+
 @media (min-width: 1024px) {
 	#hero p {
 		letter-spacing: 2em;
@@ -34,5 +40,9 @@
 @media (prefers-color-scheme: dark) {
 	#hero {
 		background: radial-gradient(circle, rgb(26, 26, 26) 0%, rgb(0, 0, 0) 100%);
+	}
+
+	.down-arrow path {
+		fill: var(--white-color);
 	}
 }
