--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -1,9 +1,10 @@
 ---
+import Container from "./Container.astro";
 const url = Astro.url.pathname;
 ---
 
 <section>
-	{url}
+	<Container lessMargin>{url}</Container>
 </section>
 <style>
 	section {
