--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -13,11 +13,11 @@ const { lessMargin = false, className = '' } = Astro.props as Props;
 
 <style>
 	.container {
-		margin: 0 auto;
+		margin: 0px auto;
 		max-width: 1080px;
 		padding: 1rem 2rem;
 	}
-	.less {
+	.container.less {
 		max-width: 1600px;
 	}
 </style>
