--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -40,4 +40,9 @@ const { frontmatter } = Astro.props;
 			flex-direction: column;
 		}
 	}
+	@media screen and (max-width: 720px) {
+		.blog-info {
+			justify-content: center;
+		}
+	}
 </style>
