--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Breadcrumbs from '../components/Breadcrumbs.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Andndre - Contact">
 	<Breadcrumbs />
-	<h1>Coming soon</h1>
+	<h1>Contact me</h1>
+	<Contact />
 </Layout>
