--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,13 +70,16 @@ const { title } = Astro.props;
 				font-size: 8rem;
 				animation: slide-right 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
 			}
-			section {
-				background: var(--not-so-black);
-				border: 1px solid var(--lighter-black);
-			}
 			h2 {
 				text-align: center;
 				font-size: 3rem;
+			}
+			h3 {
+				font-size: 2rem;
+			}
+			section {
+				background: var(--not-so-black);
+				border: 1px solid var(--lighter-black);
 			}
 
 			.astro-code {
@@ -92,6 +95,9 @@ const { title } = Astro.props;
 				h2 {
 					font-size: 2.8rem;
 				}
+				h3 {
+					font-size: 1.9rem;
+				}
 				p {
 					font-size: 0.9rem;
 				}
@@ -106,6 +112,9 @@ const { title } = Astro.props;
 				}
 				h2 {
 					font-size: 2.5rem;
+				}
+				h3 {
+					font-size: 1.7rem;
 				}
 				p {
 					font-size: 0.8rem;
