--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,7 +12,7 @@ const blogs = await Astro.glob('./*.mdx');
 	<Breadcrumbs />
 	<BlueRedBackground>
 		<h1>Welcome to Blogs</h1>
-		<Container lessMargin>
+		<Container lessMargin className="description">
 			<p>This is my blog page</p>
 		</Container>
 	</BlueRedBackground>
@@ -43,7 +43,7 @@ const blogs = await Astro.glob('./*.mdx');
 	.blog-card {
 		display: flex;
 		flex-direction: column;
-		gap: 0.5rem;
+		gap: 0.8rem;
 	}
 	.read-more {
 		margin-left: auto;
@@ -55,6 +55,12 @@ const blogs = await Astro.glob('./*.mdx');
 	.blog-list-container {
 		display: flex;
 		flex-direction: column;
-		gap: 1rem;
+		gap: 1.2rem;
+	}
+	@media screen and (max-width: 720px) {
+		.description {
+			display: flex;
+			justify-content: center;
+		}
 	}
 </style>
