--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import aboutImage from '../images/about.png';
 import tiltedRect from '../images/tilted rect.svg';
 import BlueRedBackground from '../components/BlueRedBackground.astro';
 import Container from '../components/Container.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Andndre">
@@ -86,6 +87,23 @@ import Container from '../components/Container.astro';
 							</div>
 						</div>
 						<img src={aboutImage} alt="my projects" />
+					</div>
+				</Container>
+			</section>
+			<section id="contact">
+				<Container lessMargin>
+					<h2>Contact</h2>
+					<br />
+					<div class="flex">
+						<Contact />
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit.
+							Distinctio quo veritatis eveniet nobis asperiores! Fugiat amet
+							voluptatem incidunt facilis explicabo cumque fugit veniam nam
+							inventore corrupti magnam magni a corporis repellat dolores eum
+							sapiente eos quidem beatae reiciendis asperiores molestiae
+							aliquid, laudantium officia. Ipsum quas natus hic illo et vitae.
+						</p>
 					</div>
 				</Container>
 			</section>
