--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,7 @@ import Contact from '../components/Contact.astro';
 				</Container>
 			</section>
 			<section id="contact">
-				<Container lessMargin>
+				<Container lessMargin className="hidden">
 					<h2>Contact</h2>
 					<br />
 					<div class="flex">
