--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -78,15 +78,56 @@ const { title } = Astro.props;
 				font-size: 2rem;
 			}
 			section {
-				background: var(--not-so-black);
+				background: var(--background);
 				border: 1px solid var(--lighter-black);
 			}
-
+			form {
+				background: var(--not-so-black);
+				border: 1px solid var(--lighter-black);
+				border-radius: 1rem;
+				padding: 1rem;
+				display: flex;
+				width: 100%;
+				flex-direction: column;
+				gap: 0.4rem;
+				max-width: 720px;
+			}
+			label {
+				font-weight: bold;
+			}
+			input,
+			textarea {
+				color: var(--not-so-white);
+				background: var(--not-so-black);
+				border: 1px solid var(--lighter-black);
+				padding: 0.2rem 0.4rem;
+				border-radius: 0.3rem;
+				resize: none;
+			}
 			.astro-code {
 				padding: 1rem;
 				border-radius: 0.5rem;
 			}
 
+			.flex {
+				display: flex;
+				gap: 3rem;
+				align-items: center;
+			}
+			.flex > * {
+				flex: 1;
+			}
+			.flex img {
+				width: 100px;
+			}
+			.card {
+				width: 100%;
+				background: var(--not-so-black);
+				text-align: center;
+				padding: 2rem 1rem;
+				border: 1px solid var(--lighter-black);
+				border-radius: 1rem;
+			}
 			@media screen and (max-width: 1400px) {
 				h1 {
 					font-size: 6rem;
@@ -118,6 +159,13 @@ const { title } = Astro.props;
 				}
 				p {
 					font-size: 0.8rem;
+				}
+				.flex {
+					flex-direction: column;
+				}
+				.flex > *,
+				.flex img {
+					width: 100%;
 				}
 			}
 
