--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -13,7 +13,7 @@ const { frontmatter } = Astro.props;
 	<BlueRedBackground>
 		<h1>{frontmatter.title}</h1>
 		<br />
-		<Container lessMargin className="blog-info">
+		<Container lessMargin className="description">
 			<p>{frontmatter.author}</p> -
 			<p>{frontmatter.date}</p>
 		</Container>
