--- a/src/pages/project/bagi-kelompok.astro
+++ b/src/pages/project/bagi-kelompok.astro
@@ -1,10 +1,12 @@
 ---
 import BagiKelompok from '../../components/simplePrograms/BagiKelompok';
+import Breadcrumbs from '../../components/Breadcrumbs.astro';
 import Layout from '../../layouts/Layout.astro';
 import Container from '../../components/Container.astro';
 ---
 
 <Layout title="Bagi kelompok acak - Andndre">
+	<Breadcrumbs />
 	<h1>Bagi Kelompok Acak</h1>
 	<br />
 	<br />
