--- a/src/pages/project/hitung-nilai-tugas-akhir.astro
+++ b/src/pages/project/hitung-nilai-tugas-akhir.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../../layouts/Layout.astro';
+import Breadcrumbs from '../../components/Breadcrumbs.astro';
 import Container from '../../components/Container.astro';
 ---
 
 <Layout title="Bagi kelompok acak - Andndre">
+	<Breadcrumbs />
 	<h1>Hitung Nilai Tugas Akhir</h1>
 	<br />
 	<br />
