--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,6 +24,8 @@ const { title } = Astro.props;
 		<slot />
 		<Footer />
 		<style is:global>
+			@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&display=swap');
+
 			:root {
 				--background: #120f0f;
 				--primary: #5484ff;
@@ -39,7 +41,7 @@ const { title } = Astro.props;
 				box-sizing: border-box;
 			}
 			html {
-				font-family: system-ui, sans-serif;
+				font-family: 'Montserrat', sans-serif;
 				background-color: var(--background);
 				color: white;
 			}
@@ -63,12 +65,18 @@ const { title } = Astro.props;
 				border-radius: 0.4rem;
 			}
 			h1 {
+				z-index: -1;
+				text-align: center;
 				position: relative;
 				line-height: 8rem;
 				padding: 0 2rem;
 				padding-top: 12rem;
-				font-size: 8rem;
-				animation: slide-right 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+				font-size: 7rem;
+				animation: slide-up 500ms cubic-bezier(0.075, 0.82, 0.165, 1);
+			}
+			.description {
+				display: flex;
+				justify-content: center;
 			}
 			h2 {
 				text-align: center;
@@ -130,7 +138,7 @@ const { title } = Astro.props;
 			}
 			@media screen and (max-width: 1400px) {
 				h1 {
-					font-size: 6rem;
+					font-size: 5rem;
 					line-height: 5.5rem;
 				}
 				h2 {
@@ -179,12 +187,12 @@ const { title } = Astro.props;
 				}
 			}
 
-			@keyframes slide-right {
+			@keyframes slide-up {
 				0% {
-					translate: -100vw 0;
+					translate: 0 100vh;
 				}
 				100% {
-					translate: 0;
+					translate: 0 0;
 				}
 			}
 
