--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,9 +115,11 @@ import Contact from '../components/Contact.astro';
 	.hidden {
 		opacity: 0;
 		translate: 0 20px;
+		scale: 0.95;
 		transition: all 1s ease-out;
 	}
 	.show {
+		scale: 1;
 		opacity: 1;
 		translate: 0 0;
 	}
