--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ import Breadcrumbs from '../../components/Breadcrumbs.astro';
 const blogs = await Astro.glob('./*.mdx');
 ---
 
-<Layout title="Andndre - Blog">
+<Layout title="Andndre - Blog" desc="Agung Andre's blogs page">
 	<Breadcrumbs />
 	<BlueRedBackground>
 		<h1>Welcome to Blogs</h1>
