--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,7 @@ import Container from '../components/Container.astro';
 import BlueRedBackground from '../components/BlueRedBackground.astro';
 ---
 
-<Layout title="Andndre - Contact">
+<Layout title="Andndre - Contact" desc="This is Agung Andre's contacts">
 	<BlueRedBackground>
 		<Breadcrumbs />
 		<h1>Contact me</h1>
