--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,10 @@ import Container from '../components/Container.astro';
 import Contact from '../components/Contact.astro';
 ---
 
-<Layout title="Andndre">
+<Layout
+	title="Andndre"
+	desc="Selamat datang di website Andndre - Website dimana Agung Andre membagikan informasi, project, dan ilmu yang mungkin bermanfaat bagi sebagian orang"
+>
 	<BlueRedBackground>
 		<section id="hero">
 			<img
