--- a/src/pages/project/bagi-kelompok.astro
+++ b/src/pages/project/bagi-kelompok.astro
@@ -5,7 +5,10 @@ import Layout from '../../layouts/Layout.astro';
 import Container from '../../components/Container.astro';
 ---
 
-<Layout title="Bagi kelompok acak - Andndre">
+<Layout
+	title="Bagi kelompok acak - Andndre"
+	desc="Program sederhana untuk membagi anggota menjadi beberapa kelompok secara acak"
+>
 	<Breadcrumbs />
 	<h1>Bagi Kelompok Acak</h1>
 	<br />
