--- a/src/pages/project/hitung-nilai-tugas-akhir.astro
+++ b/src/pages/project/hitung-nilai-tugas-akhir.astro
@@ -4,7 +4,10 @@ import Breadcrumbs from '../../components/Breadcrumbs.astro';
 import Container from '../../components/Container.astro';
 ---
 
-<Layout title="Bagi kelompok acak - Andndre">
+<Layout
+	title="Bagi kelompok acak - Andndre"
+	desc="Program sederhana untuk menghitung hasil nilai tugas akhir"
+>
 	<Breadcrumbs />
 	<h1>Hitung Nilai Tugas Akhir</h1>
 	<br />
