--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,10 @@ import Footer from '../components/Footer.astro';
 
 export interface Props {
 	title: string;
+	desc: string;
 }
 
-const { title } = Astro.props;
+const { title, desc } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -16,6 +17,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/ico.jpg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content={desc} />
 		<title>{title}</title>
 	</head>
 	<body>
