--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -19,7 +19,7 @@ const programs = [
 ];
 ---
 
-<Layout title="Andndre - Project">
+<Layout title="Andndre - Project" desc="Projects that Agung Andre have created">
 	<Breadcrumbs />
 	<BlueRedBackground>
 		<h1>My projects</h1>
