--- a/src/pages/l/[name].astro
+++ b/src/pages/l/[name].astro
@@ -6,5 +6,11 @@ urls.set('instagram', 'https://www.instagram.com/g.ndre');
 urls.set('github', 'https://www.github.com/Andndre');
 urls.set('facebook', 'https://web.facebook.com/agung.andre.75054');
 
-return Astro.redirect(urls.get(Astro.params.name));
+const url = urls.get(Astro.params.name);
+
+console.log(url);
+
+if (url === undefined) return Astro.redirect('/404');
+
+return Astro.redirect(url);
 ---
