--- a/src/pages/project/hitung-nilai-tugas-akhir.astro
+++ b/src/pages/project/hitung-nilai-tugas-akhir.astro
@@ -2,6 +2,12 @@
 import Layout from '../../layouts/Layout.astro';
 import Breadcrumbs from '../../components/Breadcrumbs.astro';
 import Container from '../../components/Container.astro';
+
+const maintenance = import.meta.env.MAINTENANCE;
+
+if (maintenance) {
+	return Astro.redirect('/maintenance');
+}
 ---
 
 <Layout
