--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -5,6 +5,12 @@ import BlueRedBackground from '../../components/BlueRedBackground.astro';
 import Container from '../../components/Container.astro';
 import github from '../../images/github.png';
 
+const maintenance = import.meta.env.MAINTENANCE;
+
+if (maintenance) {
+	return Astro.redirect('/maintenance');
+}
+
 const programs = [
 	{
 		name: 'Pembagian Kelompok Random',
