--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Container from '../components/Container.astro';
 import Contact from '../components/Contact.astro';
 
 const maintenance = import.meta.env.MAINTENANCE;
-if (maintenance) {
+if (maintenance === '1') {
 	return Astro.redirect('/maintenance');
 }
 ---
