--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,7 +8,7 @@ import { filterBlogsThatUnPublished } from '../../util/blogs';
 
 const maintenance = import.meta.env.MAINTENANCE;
 
-if (maintenance) {
+if (maintenance === '1') {
 	return Astro.redirect('/maintenance');
 }
 
