--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import BlueRedBackground from '../components/BlueRedBackground.astro';
 
 const maintenance = import.meta.env.MAINTENANCE;
 
-if (maintenance) {
+if (maintenance === '1') {
 	return Astro.redirect('/maintenance');
 }
 ---
