--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -7,7 +7,7 @@ import github from '../../images/github.png';
 
 const maintenance = import.meta.env.MAINTENANCE;
 
-if (maintenance) {
+if (maintenance === '1') {
 	return Astro.redirect('/maintenance');
 }
 
