--- a/src/pages/programs/index.astro
+++ b/src/pages/programs/index.astro
@@ -15,41 +15,25 @@ const programs = [
 	{
 		name: 'Pembagian Kelompok Random',
 		description: 'Bagi kelompok secara acak/random',
-		link: '/project/bagi-kelompok',
+		link: '/programs/bagi-kelompok',
 	},
 	{
 		name: 'Hitung Nilai Tugas Akhir',
 		description: 'Hitung nilai tugas akhir dengan bobot',
-		link: '/project/hitung-nilai-tugas-akhir',
+		link: '/programs/hitung-nilai-tugas-akhir',
 	},
 ];
 ---
 
-<Layout title="Andndre - Project" desc="Projects that Agung Andre have created">
+<Layout title="Andndre - Programs" desc="Simple programs">
 	<Breadcrumbs />
 	<BlueRedBackground>
-		<h1>My projects</h1>
+		<h1>Simple programs</h1>
 		<br />
 		<Container lessMargin className="description">
-			<p>Welcome to projects</p>
+			<p>Welcome to programs</p>
 		</Container>
 	</BlueRedBackground>
-	<section id="project-list">
-		<Container>
-			<h2>Projects</h2>
-			<br />
-			<div class="flex">
-				<div>
-					<p>Most of my projects are hosted on github</p>
-				</div>
-				<div class="card">
-					<a class="btn" href="https://www.github.com/Andndre"
-						><img src={github} alt="github" /> Andndre</a
-					>
-				</div>
-			</div>
-		</Container>
-	</section>
 	<section id="utilities">
 		<Container>
 			<h2>Simple Programs</h2>
