--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -18,13 +18,13 @@ const links = [
 		tooltip: 'See my blogs',
 	},
 	{
-		text: 'Project',
-		url: '/project',
-		tooltip: 'See my projects',
+		text: 'Programs',
+		url: '/programs',
+		tooltip: 'Simple programs',
 	},
 	{
 		text: 'Contact',
-		url: '/contact',
+		url: '/#contact',
 		tooltip: 'Get my contact',
 	},
 ];
@@ -81,6 +81,7 @@ const links = [
 	}
 	nav {
 		position: fixed;
+		min-height: 56px;
 		background: rgba(0, 0, 0, 0.767);
 		width: 100%;
 		z-index: 10;
