--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import backgroundImage from '../images/background.png';
+// import backgroundImage from '../images/background.png';
 import downArrow from '../images/down arrow.svg';
 import aboutImage from '../images/about.png';
 import BlueRedBackground from '../components/BlueRedBackground.astro';
