--- a/src/pages/programs/index.astro
+++ b/src/pages/programs/index.astro
@@ -3,7 +3,7 @@ import Layout from '../../layouts/Layout.astro';
 import Breadcrumbs from '../../components/Breadcrumbs.astro';
 import BlueRedBackground from '../../components/BlueRedBackground.astro';
 import Container from '../../components/Container.astro';
-import github from '../../images/github.png';
+// import github from '../../images/github.png';
 
 const maintenance = import.meta.env.MAINTENANCE;
 
