--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -115,6 +115,14 @@ const { title, desc } = Astro.props;
 				border-radius: 0.3rem;
 				resize: none;
 			}
+			table {
+				border: 1px solid var(--lighter-black);
+			}
+
+			table th {
+				color: white;
+				background: var(--primary);
+			}
 			.astro-code {
 				padding: 1rem;
 				border-radius: 0.5rem;
